--- a/src/resume/resume-container/resume-container.component.html
+++ b/src/resume/resume-container/resume-container.component.html
@@ -1,2 +1,4 @@
-<resume-left-pane class="resume-left-pane"></resume-left-pane>
-<resume-main-pane class="resume-main-pane"></resume-main-pane>
+<resume-page class="resume-page">
+    <resume-left-pane class="resume-left-pane"></resume-left-pane>
+    <resume-main-pane class="resume-main-pane"></resume-main-pane>
+</resume-page>
