style resume page

--- a/src/resume/resume-left-pane/resume-left-pane.component.scss
+++ b/src/resume/resume-left-pane/resume-left-pane.component.scss
@@ -1,13 +1,17 @@
 :host {
     color: #E1E9EE;
+    display: flex;
 
     .contact {
         font-size: 9.8;
+        display: flex;
     }
     .email {
         font-size: 7.9;
+        display: flex;
     }
     .linked_in {
         font-size: 7.9;
+        display: flex;
     }
 }
