--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@ html {
 
         resume-container {
             display: flex;
+            flex-direction: column;
             width: 70%;
             justify-content: center;
             background-color: #FFFFFF;
