removed resume-container in favor of resume-page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<resume-container></resume-container>
-<resume-container></resume-container>
+<resume-page></resume-page>
+<resume-page></resume-page>
