--- a/src/app/resume/resume-page/resume-page.component.html
+++ b/src/app/resume/resume-page/resume-page.component.html
@@ -1,1 +1,4 @@
-<ng-content></ng-content>
+<!-- <resume-page class="resume-page"> -->
+    <resume-left-pane class="resume-left-pane"></resume-left-pane>
+    <resume-main-pane class="resume-main-pane"></resume-main-pane>
+<!-- </resume-page> -->
