--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<resume-page></resume-page>
-<resume-page></resume-page>
+<resume-page-container class="resume-page-container"></resume-page-container>
