use :host, instead of class, when tag is component

--- a/src/app/resume/about/about.component.html
+++ b/src/app/resume/about/about.component.html
@@ -1,1 +1,3 @@
-<p>about works!</p>
+<div class="name" [innerText]="resume.contact.name.first + ' ' + resume.contact.name.last"></div>
+<div class="about" [innerText]="resume.contact.about"></div>
+<div class="location" [innerText]="resume.contact.location.city + ',' + resume.contact.location.country"></div>
