--- a/src/app/resume/resume-page/resume-page.component.html
+++ b/src/app/resume/resume-page/resume-page.component.html
@@ -1,2 +1,2 @@
-<resume-left-pane class="resume-left-pane"></resume-left-pane>
-<resume-main-pane class="resume-main-pane"></resume-main-pane>
+<resume-left-pane></resume-left-pane>
+<resume-main-pane></resume-main-pane>
