--- a/src/app/resume/about/about.component.scss
+++ b/src/app/resume/about/about.component.scss
@@ -4,4 +4,11 @@
         font-size: 3rem;
         line-height: 1.5;
     }
+    .about {
+
+    }
+    .location {
+        font-size: 9;
+        font-family: 'Lato-Regular';
+    }
 }
