--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,10 @@
     font-family: LiberationSerif-Regular;
     src: url(./assets/LiberationSerif-Regular.ttf); 
 }
+@font-face {
+    font-family: Lato-Regular;
+    src: url(./assets/Lato-Regular.ttf); 
+}
 
 // https://stackoverflow.com/questions/13430897/how-to-override-font-boosting-in-mobile-chrome
 html * {
