--- a/src/app/resume/about/about.component.scss
+++ b/src/app/resume/about/about.component.scss
@@ -1,12 +1,13 @@
 :host {
+    flex-direction: column;
+    height: 50vh;
+
     .name{
         font-weight: 600;
         font-size: 3rem;
         line-height: 1.5;
     }
-    .about {
 
-    }
     .location {
         font-size: 9;
         font-family: 'Lato-Regular';
