--- a/src/app/resume/resume-left-pane/resume-left-pane.component.scss
+++ b/src/app/resume/resume-left-pane/resume-left-pane.component.scss
@@ -1,21 +1,31 @@
 :host {
-    display: flex;
     flex-direction: column;
     flex: 1 0 30%;
+    align-items: center;
     color: #E1E9EE;
     background-color: #293E49;
     border-right: thin solid #5B6B73;
 
-    .contact {
-        font-size: 9.8;
-        display: flex;
-    }
-    .email {
-        font-size: 7.9;
-        display: flex;
-    }
-    .linked_in {
-        font-size: 7.9;
-        display: flex;
+    .contact-skills-container {
+        flex-direction: column;
+        height: 50vh;
+        justify-content: space-evenly;
+
+        .contact-header-list {
+            flex-direction: column;
+
+            .contact-list {
+                flex-direction: column;
+            }
+        }
+
+        .skill-header-list {
+            flex-direction: column;
+
+            .skill-list {
+                list-style-type: none;
+                flex-direction: column;
+            }
+        }
     }
 }
