--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,16 +9,19 @@
 
 html {
     display: flex;
+    // flex-flow: row wrap;
     font-family: 'Liberation Serif Regular';
 
     * {
         // https://stackoverflow.com/questions/13430897/how-to-override-font-boosting-in-mobile-chrome
         max-height:1000000rem;
+        word-break: break-word;
     }
 }
 
 body {
     display: flex;
+    // flex-flow: row wrap;
     flex-direction: column;
     flex: 1 auto;
     margin: 0;
