testing subtree push

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,8 +14,8 @@ html {
 
     * {
         // https://stackoverflow.com/questions/13430897/how-to-override-font-boosting-in-mobile-chrome
-        // max-height:1000000rem;
-        // word-break: break-word;
+        max-height:1000000rem;
+        word-break: break-word;
     }
 }
 
