favicon, background image, color adjustment to fit

--- a/src/site/resume/resume-left-pane/resume-left-pane.component.scss
+++ b/src/site/resume/resume-left-pane/resume-left-pane.component.scss
@@ -2,7 +2,9 @@
   flex-direction: column;
   flex: 1 0 30%;
   align-items: center;
-  color: #e1e9ee;
+  // color: #e1e9ee;
+  color: #f0eff4;
   background-color: #293e49;
+  // background-color: #48639c;
   border-right: thin solid #5b6b73;
 }
