--- a/src/site/resume/resume-main-pane/resume-main-pane.component.scss
+++ b/src/site/resume/resume-main-pane/resume-main-pane.component.scss
@@ -1,5 +1,6 @@
 :host {
-    flex-direction: column;
-    flex: 1 0 70%;
-    padding: 0 0 0 3%;
+  //   background-color: #F0EFF4;
+  flex-direction: column;
+  flex: 1 0 70%;
+  padding: 0 0 0 3%;
 }
