add contributions, custom linkedin URL

--- a/src/site/resume/resume-main-pane/experience/experience.component.html
+++ b/src/site/resume/resume-main-pane/experience/experience.component.html
@@ -2,3 +2,4 @@
 <div class="company" [innerText]="experience.company"></div>
 <div class="duration" [innerText]="experience | duration"></div>
 <div class="location" [innerText]="loc.city + ', ' + loc.state"></div>
+<contribution [contributions]="experience.contributions"></contribution>
