fix typo; add sizes to resume-page && experience

--- a/src/site/resume/resume-main-pane/experience/experience.component.html
+++ b/src/site/resume/resume-main-pane/experience/experience.component.html
@@ -3,3 +3,4 @@
 <div class="duration" [innerText]="experience | duration"></div>
 <div class="location" [innerText]="loc.city + ', ' + loc.state"></div>
 <contribution [contributions]="experience.contributions"></contribution>
+{{ size | json }}
