create resizeNeeded global event; rename contribution to contribution-list

--- a/src/site/resume/resume-main-pane/experience/experience.component.html
+++ b/src/site/resume/resume-main-pane/experience/experience.component.html
@@ -2,5 +2,5 @@
 <div class="company" [innerText]="experience.company"></div>
 <div class="duration" [innerText]="experience | duration"></div>
 <div class="location" [innerText]="loc.city + ', ' + loc.state"></div>
-<contribution [contributions]="experience.contributions"></contribution>
-{{ size | json }}
+<contribution-list [contributions]="experience.contributions"></contribution-list>
+<!-- {{ size | json }} -->
