--- a/src/site/resume/resume-page-container/resume-page-container.component.html
+++ b/src/site/resume/resume-page-container/resume-page-container.component.html
@@ -1,2 +1,4 @@
-<resume-page></resume-page>
-<resume-page></resume-page>
+<ng-container #container>
+  <resume-page></resume-page>
+</ng-container>
+<!-- <resume-page></resume-page> -->
