create seperate contribution component

--- a/src/site/resume/resume-main-pane/experience/contribution-list/contribution-list.component.html
+++ b/src/site/resume/resume-main-pane/experience/contribution-list/contribution-list.component.html
@@ -1,1 +1,1 @@
-<div *ngFor="let contrib of contributions" class="contribution">• {{ contrib }}</div>
+<contribution *ngFor="let contrib of contributions" [contrib]="contrib"></contribution>
