--- a/src/site/site.component.scss
+++ b/src/site/site.component.scss
@@ -6,7 +6,12 @@
     width: 100vw;
     height: 100vh;
     z-index: -1;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0.6) 100%),
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.8),
+        rgba(0, 0, 0, 0) 35%,
+        rgba(0, 0, 0, 0) 80%,
+        rgba(0, 0, 0, 0.6) 100%
+      ),
       url("/assets/background3.webp");
     background-position-x: center;
     background-position-y: center;
