--- a/src/site/resume/resume-page-container/resume-page-container.component.scss
+++ b/src/site/resume/resume-page-container/resume-page-container.component.scss
@@ -1,6 +1,19 @@
 :host {
-    // flex-flow: row wrap;
-    flex-direction: column;
-    flex: 1 0 100%;
-    align-items: center;
+  flex-direction: column;
+  flex: 1 0 100%;
+  align-items: center;
+
+  &::before {
+    content: "";
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-image: url("/assets/background4.jpeg");
+    opacity: 0.09;
+    background-position-x: center;
+    background-position-y: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
 }
