attempt to use grid and simplify

--- a/src/site/resume/resume-page/resume-page.component.html
+++ b/src/site/resume/resume-page/resume-page.component.html
@@ -1,2 +1,21 @@
-<resume-left-pane></resume-left-pane>
-<resume-main-pane></resume-main-pane>
+<contact-skills-container class="contact"></contact-skills-container>
+<experience
+  class="exp"
+  *ngFor="let exp of experiences"
+  [experience]="exp"
+></experience>
+<!-- </div> -->
+<!-- <div class="left-gutter"></div> -->
+
+<!-- <div class="container">
+  <div class="grid-item">1</div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>
+  <div class="grid-item">4</div>
+  <div class="grid-item">5</div>
+  <div class="grid-item">6</div>
+  <div class="grid-item">7</div>
+  <div class="grid-item">8</div>
+  <div class="grid-item">9</div>
+  <div class="grid-item">10</div>
+</div> -->
