--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,10 @@ html {
   font-family: "Liberation Serif Regular";
   font-size: medium;
 
+  width: auto;
+  height: auto;
+  min-height: 100%;
+  min-width: 100%;
   * {
     // https://stackoverflow.com/questions/13430897/how-to-override-font-boosting-in-mobile-chrome
     max-height: 1000000rem;
@@ -21,9 +25,13 @@ html {
 
 body {
   display: flex;
-  flex-direction: column;
-  flex: 1 auto;
+  // flex-direction: column;
+  // flex: 1 auto;
   margin: 0;
+  width: auto;
+  height: auto;
+  min-height: 100%;
+  min-width: 100%;
 
   * {
     display: flex;
