--- a/src/site/resume/resume-page/resume-page.component.html
+++ b/src/site/resume/resume-page/resume-page.component.html
@@ -1,4 +1,6 @@
+<!-- <div class="contact"> -->
 <contact-skills-container class="contact"></contact-skills-container>
+<!-- </div> -->
 <experience
   class="exp"
   *ngFor="let exp of experiences"
