--- a/src/site/resume/resume-page/resume-page.component.scss
+++ b/src/site/resume/resume-page/resume-page.component.scss
@@ -13,7 +13,11 @@
   }
 
   .contact {
-    grid-column: span auto;
+    // grid-column: span auto;
+    grid-row: span 9999;
+    grid-column: 2;
+    // grid-row-start: 1;
+    // grid-row-end: -1;
   }
   // .container {
   //   display: grid;
