--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 }
 
 html {
-  display: flex;
+  // display: flex;
   font-family: "Liberation Serif Regular";
   font-size: medium;
 
@@ -16,15 +16,15 @@ html {
   height: auto;
   min-height: 100%;
   min-width: 100%;
-  * {
-    // https://stackoverflow.com/questions/13430897/how-to-override-font-boosting-in-mobile-chrome
-    max-height: 1000000rem;
-    word-break: break-word;
-  }
+  // * {
+  // https://stackoverflow.com/questions/13430897/how-to-override-font-boosting-in-mobile-chrome
+  // max-height: 1000000rem;
+  // word-break: break-word;
+  // }
 }
 
 body {
-  display: flex;
+  // display: flex;
   // flex-direction: column;
   // flex: 1 auto;
   margin: 0;
@@ -33,7 +33,7 @@ body {
   min-height: 100%;
   min-width: 100%;
 
-  * {
-    display: flex;
-  }
+  // * {
+  //   display: flex;
+  // }
 }
