insert page break div; set row span of contract-skills-container

--- a/src/site/resume/contact-skills-container/contact-skills-container.component.scss
+++ b/src/site/resume/contact-skills-container/contact-skills-container.component.scss
@@ -1,6 +1,3 @@
 :host {
-  // grid-area: left-pane;
-  // flex-direction: column;
-  // height: 50vh;
-  // justify-content: space-evenly;
+  grid-column: 2;
 }
