--- a/src/site/resume/experience/experience.component.scss
+++ b/src/site/resume/experience/experience.component.scss
@@ -1,5 +1,6 @@
 :host {
-  display: grid;
+  grid-column: 3;
+  // grid-row: span 2;
   // grid-area: main-pane;
   // height: fit-content;
   // flex-direction: column;
