--- a/src/site/resume/resume-page/resume-page.component.html
+++ b/src/site/resume/resume-page/resume-page.component.html
@@ -1,11 +1,7 @@
 <!-- <div class="contact"> -->
 <contact-skills-container class="contact"></contact-skills-container>
 <!-- </div> -->
-<experience
-  class="exp"
-  *ngFor="let exp of experiences"
-  [experience]="exp"
-></experience>
+<experience *ngFor="let exp of experiences" [experience]="exp"></experience>
 <!-- </div> -->
 <!-- <div class="left-gutter"></div> -->
 
