--- a/src/site/site.component.scss
+++ b/src/site/site.component.scss
@@ -1,7 +1,8 @@
 :host {
-  width: 100vw;
-  height: 100vh;
-  position: relative;
+  display: block;
+  // width: 100vw;
+  // height: 100vh;
+  // position: relative;
   // &::before {
   //   content: "";
   //   position: fixed;
