--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,14 +8,13 @@
 }
 
 html {
-  // display: flex;
   font-family: "Liberation Serif Regular";
   font-size: medium;
 
-  width: auto;
-  height: auto;
-  min-height: 100%;
-  min-width: 100%;
+  // width: auto;
+  // height: auto;
+  // min-height: 100%;
+  // min-width: 100%;
   // * {
   // https://stackoverflow.com/questions/13430897/how-to-override-font-boosting-in-mobile-chrome
   // max-height: 1000000rem;
@@ -24,14 +23,16 @@ html {
 }
 
 body {
-  // display: flex;
+  & > * {
+    display: flex;
+  }
   // flex-direction: column;
   // flex: 1 auto;
   margin: 0;
-  width: auto;
-  height: auto;
-  min-height: 100%;
-  min-width: 100%;
+  // width: auto;
+  // height: auto;
+  // min-height: 100%;
+  // min-width: 100%;
 
   // * {
   //   display: flex;
