--- a/src/site/resume/resume-page/resume-page.component.scss
+++ b/src/site/resume/resume-page/resume-page.component.scss
@@ -1,7 +1,8 @@
 :host {
   display: grid;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: 0.8fr;
   grid-template-columns: 1fr 2fr 5fr 1fr;
+  grid-template-rows: repeat(7, minmax(min-content, auto));
 
   .page-break {
     grid-column: 3;
