[BUG-#1] doesn't add page break divs correctly

--- a/src/site/resume/contact-skills-container/contact-skills-container.component.scss
+++ b/src/site/resume/contact-skills-container/contact-skills-container.component.scss
@@ -1,3 +1,6 @@
 :host {
-  grid-column: 2;
+  grid-column: 1 / span 2;
+  color: #f0eff4;
+  background-color: #293e49;
+  border-right: thin solid #5b6b73;
 }
