--- a/src/site/resume/resume-page/resume-page.component.scss
+++ b/src/site/resume/resume-page/resume-page.component.scss
@@ -1,10 +1,23 @@
 :host {
   display: grid;
-  grid-auto-rows: 0.8fr;
-  grid-template-columns: 1fr 2fr 5fr 1fr;
-  grid-template-rows: repeat(7, minmax(min-content, auto));
+  grid-template-columns: 1fr 8fr 1fr;
 
   .page-break {
-    grid-column: 3;
+    grid-column: 1 / span 2;
   }
+  // grid-auto-rows: minmax(0.8fr, auto);
+  // grid-template-columns: repeat(4, minmax(min-content, auto));
+  // grid-template-columns: 1fr 2fr 10fr 2fr;
+  // grid-template-rows: repeat(7, minmax(min-content, auto));
+  // margin: 0 0 2% 0;
+  // width: 70%;
+  // min-height: 97vh;
+  // justify-content: center;
+  // .page-break,
+  // .grid--center {
+  // }
+
+  // &:nth-child(1) {
+  // margin: 2% 0 2% 0;
+  // }
 }
