--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,9 +23,9 @@ html {
 }
 
 body {
-  & > * {
-    display: flex;
-  }
+  // & > * {
+  //   display: flex;
+  // }
   // flex-direction: column;
   // flex: 1 auto;
   margin: 0;
@@ -35,6 +35,7 @@ body {
   // min-width: 100%;
 
   // * {
-  //   display: flex;
+  // display: flex;
+  // z-index: 1;
   // }
 }
