layout for tablet; mobile; responsive

--- a/src/site/resume/contact-skills-container/contact-skills-container.component.html
+++ b/src/site/resume/contact-skills-container/contact-skills-container.component.html
@@ -1,2 +1,7 @@
-<contact-details></contact-details>
-<skill-list></skill-list>
+<div class="image">
+  <img class="me" src="assets/me.jpeg" />
+</div>
+<div class="contact-skills">
+  <contact-details class="details"></contact-details>
+  <skill-list class="skills"></skill-list>
+</div>
