--- a/src/site/resume/contact-skills-container/contact-skills-container.component.scss
+++ b/src/site/resume/contact-skills-container/contact-skills-container.component.scss
@@ -1,6 +1,87 @@
+@import "src/_variables";
+
 :host {
-  grid-column: 1 / span 2;
-  color: #f0eff4;
-  background-color: #293e49;
-  border-right: thin solid #5b6b73;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+
+  .image {
+    flex: 1;
+    .me {
+      object-fit: cover;
+      border-radius: 50%;
+      display: block;
+      overflow-clip-margin: content-box;
+      overflow: clip;
+      margin: 5% 0 0 0;
+      box-shadow: 0 0 0 1px;
+      height: 128px;
+      width: 128px;
+    }
+  }
+
+  .contact-skills {
+    flex: 4;
+
+    .details {
+      flex: 1;
+    }
+
+    .skills {
+      flex: 3;
+    }
+  }
+
+  @media only screen and (max-width: $tablet) {
+    flex-direction: row;
+    .image {
+      flex: 1;
+      align-items: center;
+
+      .me {
+        margin: 5% 0 5% 0;
+      }
+    }
+    .contact-skills {
+      flex-direction: row;
+      flex: 2;
+
+      .details {
+        margin: 0 0 0 2%;
+        flex: 1;
+      }
+      .skills {
+        margin: 0 0 0 2%;
+        flex: 1;
+      }
+    }
+  }
+
+  @media only screen and (max-width: $stack-break) {
+    flex-direction: column;
+
+    .image {
+      // flex: 1 0 100%;
+      flex: unset;
+    }
+
+    .contact-skills {
+      flex-flow: row wrap;
+      width: 100%;
+
+      margin: 0 0 2% 0;
+
+      .details {
+        align-items: center;
+        flex: 2 0 100%;
+        margin: 0 0 0 2%;
+      }
+
+      .skills {
+        align-items: center;
+        flex: 1;
+      }
+    }
+  }
 }
