--- a/src/site/resume/resume-page/page-container/page-container.component.scss
+++ b/src/site/resume/resume-page/page-container/page-container.component.scss
@@ -1,12 +1,24 @@
+@import "src/_variables";
+
 :host {
-  grid-column: 2;
-  display: grid;
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  width: 80vw;
+  margin: 0 0 2% 0;
+
+  &:nth-child(1) {
+    margin: 2% 0 2% 0;
+  }
+
+  @media only screen and (max-width: $tablet) {
+    flex-direction: column;
+    // width: 40vw;
+  }
+  // grid-column: 2;
+  // display: grid;
   // grid-template-columns: 1fr 2fr 10fr 2fr;
-  height: auto;
+  // height: auto;
   background-color: #f0eff4;
   box-shadow: 1rem 1rem 1rem 1rem #2c1e16;
-
-  .page-break {
-    grid-column: 3;
-  }
 }
