--- a/src/site/resume/resume-page/resume-page.component.html
+++ b/src/site/resume/resume-page/resume-page.component.html
@@ -1,8 +1,13 @@
-<ng-container *ngIf="pages; else elseBlock"> </ng-container>
+<ng-container *ngIf="pages; else elseBlock">
+  <page-container *ngFor="let expr of pages; let numPg = index">
+    <div class="left-pane">
+      <contact-skills-container *ngIf="numPg === 0"></contact-skills-container>
+    </div>
+    <div class="content">
+      <experience *ngFor="let exp of expr" [experience]="exp"></experience>
+    </div>
+  </page-container>
+</ng-container>
 <ng-template #elseBlock>
   <experience [experience]="experiences[0]"></experience>
 </ng-template>
-<page-container *ngFor="let expr of pages">
-  <contact-skills-container></contact-skills-container>
-  <experience *ngFor="let exp of expr" [experience]="exp"></experience>
-</page-container>
