--- a/src/site/site.component.scss
+++ b/src/site/site.component.scss
@@ -1,18 +1,13 @@
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
   &::before {
     content: "";
     position: fixed;
-    // position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: -1;
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.8),
-        rgba(0, 0, 0, 0) 35%,
-        rgba(0, 0, 0, 0) 80%,
-        rgba(0, 0, 0, 0.6) 100%
-      ),
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0) 35%, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0.6) 100%),
       url("/assets/background3.webp");
     background-position-x: center;
     background-position-y: center;
@@ -21,27 +16,4 @@
     background-attachment: fixed;
     transform: scaleX(-1);
   }
-  // width: 100vw;
-  // height: 100vh;
-  // position: relative;
-  // &::before {
-  //   content: "";
-  //   position: fixed;
-  //   width: 100vw;
-  //   height: 100vh;
-  //   z-index: -1;
-  //   background-image: linear-gradient(
-  //       rgba(0, 0, 0, 0.8),
-  //       rgba(0, 0, 0, 0) 35%,
-  //       rgba(0, 0, 0, 0) 80%,
-  //       rgba(0, 0, 0, 0.6) 100%
-  //     ),
-  //     url("/assets/background3.webp");
-  //   background-position-x: center;
-  //   background-position-y: center;
-  //   background-size: cover;
-  //   background-repeat: no-repeat;
-  //   background-attachment: fixed;
-  //   transform: scaleX(-1);
-  // }
 }
