--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,10 +11,9 @@ html {
   font-family: "Liberation Serif Regular";
   font-size: medium;
 
-  // width: auto;
-  // height: auto;
-  // min-height: 100%;
-  // min-width: 100%;
+  display: flex;
+  flex-direction: column;
+
   // * {
   // https://stackoverflow.com/questions/13430897/how-to-override-font-boosting-in-mobile-chrome
   // max-height: 1000000rem;
@@ -23,19 +22,20 @@ html {
 }
 
 body {
-  // & > * {
-  //   display: flex;
-  // }
+  display: flex;
+  flex-direction: column;
   // flex-direction: column;
-  // flex: 1 auto;
   margin: 0;
-  // width: auto;
-  // height: auto;
   // min-height: 100%;
   // min-width: 100%;
 
-  // * {
-  // display: flex;
-  // z-index: 1;
-  // }
+  * {
+    display: flex;
+    flex-direction: column;
+    word-break: break-word;
+    box-sizing: border-box;
+    max-width: 100%;
+    // flex-wrap: wrap;
+    // z-index: 1;
+  }
 }
