add company; portfolio section

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,3 +5,5 @@ $stack-break: 600px !default;
 $tablet: 768px !default;
 $laptop: 1024px !default;
 $laptop-large: 1440px !default;
+
+$white: #f0eff4 !default;
