--- a/src/site/resume/contact-skills-container/contact-details/contact-details.component.scss
+++ b/src/site/resume/contact-skills-container/contact-details/contact-details.component.scss
@@ -1,6 +1,18 @@
+@import "src/_variables";
+
 :host {
   .header {
     font-size: 1.3rem;
     line-height: 3rem;
+  }
+
+  .linked-in {
+    color: $white;
+    text-decoration: none;
+  }
+
+  .website {
+    color: $white;
+    text-decoration: none;
   }
 }
