--- a/src/site/resume/contact-skills-container/contact-details/contact-details.component.html
+++ b/src/site/resume/contact-skills-container/contact-details/contact-details.component.html
@@ -1,4 +1,28 @@
-<div class="header">Contact</div>
-<div class="email" [innerText]="contact.email"></div>
-<span class="linked_in" [innerText]="contact.linked_in"></span>
-<div class="website" [innerText]="contact.websites.leia"></div>
+<div class="contact">
+  <div class="header">Contact</div>
+  <div class="email" [innerText]="contact.email"></div>
+  <a
+    class="linked-in"
+    [innerText]="contact.linked_in"
+    [href]="'https://' + contact.linked_in"
+  ></a>
+</div>
+
+<div class="portfolio">
+  <div class="header">Portfolio</div>
+  <a
+    class="website"
+    [innerText]="contact.websites.bwin"
+    [href]="'https://' + contact.websites.bwin"
+  ></a>
+  <a
+    class="website"
+    [innerText]="contact.websites.leia"
+    [href]="'https://' + contact.websites.leia"
+  ></a>
+  <a
+    class="website"
+    [innerText]="contact.websites.chapkinlab"
+    [href]="'https://' + contact.websites.chapkinlab"
+  ></a>
+</div>
