--- a/src/site/resume/resume-page/page-container/page-container.component.scss
+++ b/src/site/resume/resume-page/page-container/page-container.component.scss
@@ -19,6 +19,6 @@
   // display: grid;
   // grid-template-columns: 1fr 2fr 10fr 2fr;
   // height: auto;
-  background-color: #f0eff4;
+  background-color: $white;
   box-shadow: 1rem 1rem 1rem 1rem #2c1e16;
 }
