--- a/src/site/resume/resume-page/resume-page.component.scss
+++ b/src/site/resume/resume-page/resume-page.component.scss
@@ -1,3 +1,5 @@
+@import "src/_variables";
+
 :host {
   display: flex;
   flex-direction: column;
@@ -5,7 +7,7 @@
 
   .left-pane {
     min-width: 20vw;
-    color: #f0eff4;
+    color: $white;
     background-color: #293e49;
     border-right: thin solid #5b6b73;
   }
