--- a/src/site/resume/contact-skills-container/skill-list/skill-list.component.html
+++ b/src/site/resume/contact-skills-container/skill-list/skill-list.component.html
@@ -1,4 +1,6 @@
-<div class="header">Top Skills</div>
-<div class="skill">Angular</div>
-<div class="skill">Typescript</div>
-<div class="skill">Git</div>
+<div class="header-skills" [style.width.px]="width">
+  <div class="header">Top Skills</div>
+  <div class="skill">Angular</div>
+  <div class="skill">Typescript</div>
+  <div class="skill">Git</div>
+</div>
