--- a/src/site/resume/contact-skills-container/contact-details/contact-details.component.html
+++ b/src/site/resume/contact-skills-container/contact-details/contact-details.component.html
@@ -21,6 +21,7 @@
     [href]="'https://' + contact.websites.leia"
   ></a>
   <a
+    *ngIf="showAll"
     class="website"
     [innerText]="contact.websites.chapkinlab"
     [href]="'https://' + contact.websites.chapkinlab"
