--- a/src/site/resume/contact-skills-container/skill-list/skill-list.component.scss
+++ b/src/site/resume/contact-skills-container/skill-list/skill-list.component.scss
@@ -2,24 +2,30 @@
 
 :host {
   flex-direction: column;
-  width: 85.15%;
 
-  .header {
-    line-height: 3rem;
+  .header-skills {
+    .header {
+      line-height: 3rem;
+    }
   }
 
   @media only screen and (max-width: $tablet) {
     flex-direction: row;
     flex-flow: row wrap;
 
-    .header {
-      flex: 1 0 100%;
-      text-align: center;
-    }
-
-    .skill {
+    .header-skills {
+      flex-flow: row wrap;
       flex: 1;
-      text-align: center;
+
+      .header {
+        flex: 1 0 100%;
+        text-align: center;
+      }
+
+      .skill {
+        flex: 1;
+        text-align: center;
+      }
     }
   }
 }
